@@ -6,7 +6,7 @@ Test::Mock::Wrapper
 
 =head1 VERSION
 
-version 0.06.1
+version 0.07
 
 =head1 SYNOPSIS
 
