@@ -4,7 +4,7 @@ license = Perl_5
 copyright_holder = Dave Mueller
 copyright_year   = 2015
 
-version = 0.06.1
+version = 0.07
 
 [GatherDir]
 [GithubMeta]
